# SPICE

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  NOISE_INJECTION_USAGE.md  POLYNOMIAL_RNN_STANDALONE_SPEC.md  README.md  benchmark_all_rnns.py  claude.md  convert_ipynb_to_md.py  demo_optimization.py  generate_behavior_sampled_qlearning.py  instructions_autoSPICE.txt  playground.ipynb  playground_dynamics.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  simple_benchmark.py  spice_action_plan.md  test_dataset_dezfouli.py  test_forward_pass.py  test_library.py  test_library_estimator.py  test_optimization.py  test_real_optimization.py  weber2025.txt  weinhardt2025_library_rnn.py
.claude/: claude.md  settings.json
.github/workflows/: convert-and-deploy.yml
analysis/: analysis_model_plot_session.py  hbi_model_validation.py  hierarchical_bayes_numpyro.py  hierarchical_bayes_numpyro_noCF.py
analysis/dezfouli2019/: analysis_load_spice.ipynb  parse_dezfouli2019.py  run.py  vanilla_spice.ipynb
analysis/experiment_embedding/: fit_spice.ipynb
analysis/utils/: compare_agents.py  convert_dataset.py  create_dataset_AgentMCMC.py  create_dataset_AgentQ.py  create_dataset_AgentSPICE.py  setup_agents.py
docs/: Gemfile  _config.yml  api.md  guidelines_polynomial_amenable_architectures.md  index.md  installation.md  quickstart.md  tutorials.md
docs/_site/: api.html  feed.xml  index.html  installation.html  quickstart.html  tutorials.html
docs/tutorials/: 0_data_preparation.md  1_rescorla_wagner.md  2_rescorla_wagner_forgetting.md  3_hardcoded_equations.md  4_individual_differences.md  5_choice_perseverance.md  5_weinhardt_et_al_2024.md  convert.py  convert_all.py  data_preparation.md  hardcoded_equations.md  individual_differences.md  rescorla_wagner.md  rescorla_wagner_forgetting.md  weinhardt_2024.md
figures/: create_figure2a.py  prototype_dynamics_trace.py  prototype_equation_fingerprint.py  prototype_figure2a_dumbbell.py  prototype_structural_subtypes.py  toy_dynamics.py
ganesh2024a/: spice_config.py  training_pipeline.py  visualize_probs.py
ganesh2024a/data/: GBSlider_ganesh2024a_xs_withChosehighLow.csv  GBSlider_ganesh2024a_xs_withRand.csv  GBSlider_ganesh2024a_ys_withRand.csv  ganesh2024a.csv  ganesh2024a_agentSims_xs.csv  ganesh2024a_merged_rewards.csv  ganesh2024a_merged_rewards_rand.csv  ganesh2024a_randContDiff.csv  ganesh2024a_short.csv
ganesh2024a/params/: lstm_ganesh2024a.pkl  rnn_ganesh2024a.pkl  rnn_ganesh2024a_test.pkl  spice_ganesh2024a.pkl
spice/: DEPRECATED_precoded.py  __init__.py  estimator.py  optimized_rnns.py  pipeline_rnn.py  pipeline_rnn_autoreg.py  pipeline_sindy.py  precoded.py  theorist.py
spice/benchmarking/: analysis_model_plot_session.py  check_mcmc_model.py  hierarchical_bayes_numpyro.py  hierarchical_bayes_numpyro_noCF.py
spice/precoded/: choice.py  ddm.py  embedding.py  forgetting.py  interaction.py  learningrate.py  rescorlawagner.py  workingmemory.py  workingmemory2.py  workingmemory_counterfactual.py  workingmemory_multiitem.py  workingmemory_rewardbinary.py  workingmemory_rewardflags.py  workingmemory_rewardtransform.py
spice/resources/: __init__.py  bandits.py  ddm.py  estimator.py  fit_sindy.py  model.py  model_evaluation.py  old_rnn.py  optimizer_selection.py  rnn.py  rnn_training.py  rnn_training_awd.py  rnn_training_imaml.py  rnn_utils.py  sindy_compression.py  sindy_differentiable.py  sindy_training.py  sindy_utils.py  spice_training.py  spice_utils.py
spice/utils/: __init__.py  agent.py  convert_dataset.py  create_dataset_AgentMCMC.py  create_dataset_AgentSPICE.py  diagnostics.py  plotting.py  setup_agents.py
tests/: __init__.py  conftest.py  test_polynomial_unfolding.py  test_theorist.py
tutorials/: 0_data_preparation.ipynb  1_0_rescorla_wagner.ipynb  1_1_rescorla-wagner_forgetting.ipynb  1_1_rescorla_wagner_forgetting.ipynb  1_2_hardcoded_equations.ipynb  1_3_individual_differences.ipynb  1_4_weinhardt_et_al_2024.ipynb  1_rescorla-wagner.ipynb  1_rescorla_wagner.ipynb  2_hardcoded_equations.ipynb  2_model_loading.ipynb  2_rescorla-wagner_forgetting.ipynb  2_rescorla_wagner_forgetting.ipynb  3_hardcoded_equations.ipynb  3_individual_differences.ipynb  4_individual_differences.ipynb  5_choice_perseverance.ipynb  5_weinhardt_et_al_2024.ipynb  ASDMB_SPICE_tutorial_2025.ipynb  auto_regularization.ipynb  auto_regularization.py  bulk_analysis.py  lecture_tutorial_spice.ipynb  lecture_tutorial_spice_solution.ipynb  rnn_model.pkl  single_analysis.py  spice_model.pkl
weinhardt2025/: run.py  run_sindy_endtoend.py  train_synthetic.slurm
weinhardt2025/analysis/: analysis_coefficients.py  analysis_coefficients_distributions.py  analysis_coefficients_individuals.py  analysis_confusion_matrix.py  analysis_embedding_correlation.py  analysis_embedding_quartiles.py  analysis_model_evaluation.py  analysis_model_evaluation_table.py  analysis_parameter_recovery.py  analysis_parameter_recovery_2.py  analysis_parameter_recovery_old.py  compare_agents.py  create_dataset_AgentQSampled.py  generate_behavior.py  trials.py  trials_number_impact_analysis.py  visualize_loss_landscape.py
weinhardt2025/aux/: augustat2025.ipynb  augustat2025.py  braun2018.ipynb  bustamante2023.ipynb  castro2025.ipynb  dezfouli2019.ipynb  eckstein2024.ipynb  ganesh2024a.ipynb  ganesh2024a_choice.ipynb  ganesh2024a_choice_contrast.ipynb  ganesh2024a_choice_position.ipynb  huang2025.ipynb  huang2025_2.ipynb  huang2025_3.ipynb  hwang2025.ipynb  spice_huang2025.pkl  synthetic.ipynb  ting2023.ipynb  weber2024.ipynb
weinhardt2025/benchmarking/: benchmarking_bustamante2023.py  benchmarking_castro2025.py  benchmarking_castro2025_copy.py  benchmarking_castro2025_old.py  benchmarking_dezfouli2019.py  benchmarking_eckstein2022.py  benchmarking_eckstein2024.py  benchmarking_gru.py  benchmarking_lstm.py  benchmarking_qlearning.py  check_mcmc_model.py
weinhardt2025/data/: eckstein2022.csv  q_agent_.csv
weinhardt2025/utils/: bandits.py  concept_discovery.py  config_model_comparison.py  (+4 more)
weinhardt2026/: model_descriptions.md  run.py
(+214 files in other folders)
