[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autospice"
version = "0.1.93"
description = "SPICE: Sparse and Interpretable Cognitive Equations"
readme = "README.md"
authors = [
    { name = "Daniel Weinhardt", email = "daniel.weinhardt@uni-osnabrueck.de" }
]
maintainers = [
    { name = "Muhip Tezcan", email = "itezcan@uni-osnabrueck.de" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["cognitive-science", "reinforcement-learning", "machine-learning", "rnn", "dynamical-systems", "sindy"]
requires-python = ">=3.11"

dependencies = [
    "arviz>=0.20.0,<0.21.0",
    "jax>=0.4.35,<0.5.0",
    "matplotlib>=3.10.0,<4.0.0",
    "numpy>=1.21.0,<2.0.0",
    "numpyro>=0.15.0,<0.16.0",
    "pandas>=2.2.0,<3.0.0",
    "pymc>=5.21.0,<6.0.0",
    "pyro_ppl>=1.9.0,<2.0.0",
    "pysindy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "scipy>=1.15.0,<2.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "torch>=2.0.0,<3.0.0",
    "tqdm>=4.65.0",
    "optuna>=4.3.0,<5.0.0",
    "dill>=0.4.0,<0.5.0",
    "pytest>=7.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.urls]
Issues="https://github.com/whyhardt/SPICE/issues"
Repository="https://github.com/whyhardt/SPICE"
Documentation="https://whyhardt.github.io/SPICE/"

[tool.setuptools.packages.find]
include = ["spice", "spice.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=spice --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 