[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autospice"
version = "0.2.0"
description = "SPICE: Sparse and Interpretable Cognitive Equations"
readme = "README.md"
authors = [
    { name = "Daniel Weinhardt", email = "daniel.weinhardt@uni-osnabrueck.de" }
]
maintainers = [
    { name = "Muhip Tezcan", email = "itezcan@uni-osnabrueck.de" }
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["cognitive-science", "reinforcement-learning", "machine-learning", "rnn", "dynamical-systems", "sindy"]
requires-python = ">=3.11"

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "matplotlib==3.10.1",
    "scikit-learn==1.7.0",
    "torch==2.7.1",
    "tqdm==4.67.1"
]

[project.optional-dependencies]
analysis = [
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "jax==0.4.35",
    "numpyro==0.15.3",
    "arviz==0.20.0",
    "adabelief-pytorch==0.2.1",
    "joblib==1.5.1",
    "loss-landscapes==3.0.6"
]
dev = [
    "pytest==8.4.1",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]
all = [
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "jax==0.4.35",
    "numpyro==0.15.3",
    "arviz==0.20.0",
    "adabelief-pytorch==0.2.1",
    "joblib==1.5.1",
    "loss-landscapes==3.0.6",
    "pytest==8.4.1",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0"
]

[project.urls]
Issues="https://github.com/whyhardt/SPICE/issues"
Repository="https://github.com/whyhardt/SPICE"
Documentation="https://whyhardt.github.io/SPICE/"

[tool.setuptools.packages.find]
include = ["spice", "spice.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=spice --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 